--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>myFlix</title>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>bflix</title>
   </head>
   <body>
-    <div class="app-container"></div>
-    <script src="/src/index.jsx" type="module"></script>
+      <div class="app-container"></div>
+      <script type="module" src="index.jsx"></script>
   </body>
 </html>
